# paris_price_estimator

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: test_optimization.py
src/price_estimator/: __init__.py
src/price_estimator/datasets/: __init__.py  geo_dvf.py
src/price_estimator/tools/: __init__.py  geolocation.py
tests/: __init__.py  conftest.py
tests/datasets/: __init__.py  test_geo_dvf.py
tests/tools/: __init__.py  test_geolocation.py
