[project]
name = "paris-price-estimator"
version = "0.1.0"
description = ""
authors = [
    {name = "Thibaut CHAUFFIER",email = "tchauffi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (==2.2)",
    "numpy (>=1.0.0,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "fastapi (>=0.115.14,<0.116.0)"
]

[tool.poetry]
packages = [{include = "price_estimator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"
pre-commit = "^4.0.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.7"
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
types-requests = "^2.32.4.20250611"
pandas-stubs = "^2.2.3.250527"

[tool.ruff]
# Set the maximum line length to 88.
line-length = 88

[tool.ruff.lint]
extend-select = [
  "E501", # pycodestyle
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]
